[package]
name = "sugar_path"
description = "Sugar functions for manipulating paths"
keywords = ["path", "path-slash", "relative-path"]
repository = "https://github.com/hyf0/sugar_path"
version = "2.0.0"
edition = "2024"
license = "MIT"
autobenches = false

[features]
# Enable `cached_current_dir` will make `SugarPath` to only call `std::env::current_dir` once for all path operations.
cached_current_dir = []
codspeed = ["criterion2/codspeed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2"
smallvec = "1.15"

[dev-dependencies]
criterion2 = { version = "3", default-features = false }

[profile.bench]
debug = true

[[bench]]
name = "absolutize"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "relative"
harness = false

[[bench]]
name = "to_slash"
harness = false

[[bench]]
name = "as_path"
harness = false
