[workspace]
members = ["tasks/track_allocations"]
resolver = "3"

[package]
name = "sugar_path"
description = "Host-native lexical path manipulation with borrowed and owned-buffer APIs"
keywords = ["path", "path-slash", "relative-path"]
categories = ["filesystem"]
repository = "https://github.com/hyf0/sugar_path"
version = "2.0.1"
edition = "2024"
license = "MIT"
autobenches = false
exclude = [".agents/", ".cargo/", ".github/", "AGENTS.md", "CLAUDE.md", "benchmarks/"]

[features]
# Cache the first successful ambient cwd lookup for processes that treat cwd as stable.
cached_current_dir = []
# Enable CodSpeed's Criterion integration for maintainer benchmark jobs.
codspeed = ["criterion2/codspeed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2"
smallvec = "1.15"

[dev-dependencies]
arcstr = { version = "=1.2.0", default-features = false }
criterion2 = { version = "3", default-features = false }
mimalloc-safe = "=0.1.64"

[profile.bench]
codegen-units = 1
debug = "line-tables-only"
lto = "fat"

[[bench]]
name = "absolutize"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "relative"
harness = false

[[bench]]
name = "to_slash"
harness = false

[[bench]]
name = "as_path"
harness = false

[[bench]]
name = "rolldown"
harness = false
