[package]
name = "sugar_path_track_allocations"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
arcstr = { version = "=1.2.0", default-features = false }
mimalloc-safe = "=0.1.64"
# The continuous allocation gate measures the primary production config
# (cwd treated as process-lifetime state), not the empty default feature set.
sugar_path = { path = "../..", features = ["cached_current_dir"] }
